--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="نكران">
-    <link rel="apple-touch-icon" href="1000394637.png">
+    <link rel="apple-touch-icon" href="Logo.png">
     <title>تطبيق نكران</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
@@ -50,7 +50,7 @@
     <!-- شاشة الترحيب (Splash Screen) -->
     <div id="splash" class="fixed inset-0 z-[100] flex flex-col items-center justify-center">
         <div class="relative w-40 h-40">
-            <img src="1000394637.png" alt="نكران" class="w-full h-full object-contain animate-pulse">
+            <img src=" Logo.png" alt="نكران" class="w-full h-full object-contain animate-pulse">
         </div>
         <div class="mt-8 text-lg font-bold text-white/80 tracking-widest animate-bounce">نـكـران</div>
     </div>
@@ -61,7 +61,7 @@
         <!-- Header -->
         <header class="pt-12 pb-4 px-6 flex items-center justify-between glass sticky top-0 z-40 rounded-b-3xl shadow-lg">
             <div class="w-10 h-10 overflow-hidden rounded-xl border border-white/20 shadow-lg bg-white/5">
-                <img src="1000394637.png" alt="Logo" class="w-full h-full object-contain">
+                <img src=" Logo.png" alt="Logo" class="w-full h-full object-contain">
             </div>
 
             <div class="flex-1 mx-4 relative">
@@ -82,7 +82,7 @@
                 <div class="flex flex-col items-center gap-6">
                     <!-- الصورة المصغرة -->
                     <div class="w-48 h-48 bg-white/5 rounded-[2rem] border border-white/10 overflow-hidden shadow-2xl relative">
-                        <img src="1000394637.png" alt="Thumbnail" class="w-full h-full object-contain p-4">
+                        <img src=" Logo.png" alt="Thumbnail" class="w-full h-full object-contain p-4">
                         <div class="absolute inset-0 bg-gradient-to-t from-black/20 to-transparent"></div>
                     </div>
                     
